[package]
name = "ljr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# luajit2-sys = { path = "../luajit2-sys", default-features = false }
luajit2-sys = "0.0.2"
thiserror = "2.0.17"
macros = { path = "./macros" }

[workspace]
members = ["macros", "codegen", "tests"]

# [features]
# default = ["static"]
# static = ["luajit2-sys/static"]
# dynamic = ["luajit2-sys/dynamic"]
