[package]
name = "ljr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
mlua-sys = { version = "0.8.3", default-features = false }
thiserror = "2.0.17"
macros = { path = "./macros" }

[workspace]
members = ["macros", "codegen", "tests"]

[features]
default = ["static"]
static = ["mlua-sys/vendored", "mlua-sys/luajit"]
dynamic = ["mlua-sys/module", "mlua-sys/luajit"]
