[package]
name = "ljr"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua-sys = { version = "0.9", default-features = false }
thiserror = "2.0.17"
macros = { path = "./macros" }

[workspace]
members = ["macros", "codegen", "tests"]

[features]
default = ["static"]
static = ["mlua-sys/vendored", "mlua-sys/luajit"]
dynamic = ["mlua-sys/module", "mlua-sys/luajit"]

[dev-dependencies]
criterion = "0.8.0"
mlua = { version = "0.11.5", features = [
    "luajit",
    "macros",
    "mlua_derive",
    "userdata-wrappers",
] }

[[bench]]
name = "mlua"
harness = false

[profile.release]
mlua = true
